fix: invisible pages should not be clickable
Discovered this while working through errors during the migration. When a page is invisible, the elements are still clickable. This is not expected behavior.

--- a/core/src/css/core.scss
+++ b/core/src/css/core.scss
@@ -200,6 +200,8 @@ ion-toast-controller,
 
 .ion-page-invisible {
   opacity: 0;
+
+  pointer-events: none;
 }
 
 .can-go-back > ion-header ion-back-button {
